making MVVM for Login + Navigation

--- a/gradle/wrapper/gradle-wrapper.properties
+++ b/gradle/wrapper/gradle-wrapper.properties
@@ -5,3 +5,8 @@ networkTimeout=10000
 validateDistributionUrl=true
 zipStoreBase=GRADLE_USER_HOME
 zipStorePath=wrapper/dists
+
+org.gradle.enterprise.build-validation=false
+org.gradle.internal.report.events=false
+org.gradle.caching=true
+org.gradle.parallel=true
