--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -14,15 +14,18 @@ androidx-test-junit = "1.2.1"
 compose-multiplatform = "1.7.0"
 foundation = "1.7.0"
 junit = "4.13.2"
-koinAndroid = "3.4.0"
-koinCore = "4.0.0"
-koinCoreVersion = "3.4.0"
+
+koinAndroid = "4.0.3"
+koinCore = "4.0.3"
+
 kotlin = "2.1.0"
 kotlinx-coroutines = "1.10.1"
+lifecycleViewmodelComposeVersion = "2.8.2"
 material3Android = "1.3.1"
 ktor = "3.0.0"
 kotlinx-serialization = "1.7.3"
 napier = "2.6.1"
+precomposeViewmodel = "1.5.10"
 securityCrypto = "1.1.0-alpha07"
 uiUtil = "1.7.0"
 webkit = "1.13.0"
@@ -33,17 +36,28 @@ sqliteDriverVersion = "2.0.2"
 
 okio = "3.10.2"
 securityCryptoKtx = "1.0.0"
+lifecycleViewmodelAndroid = "2.8.7"
+
+lifecycleViewModel = "2.8.3"
+lifecycleViewModelCompose = "2.8.0"
+animationCoreLint = "1.8.0"
 
 [libraries]
+koin-compose = { module = "io.insert-koin:koin-compose", version.ref = "koinCore" }
+koin-compose-viewmodel = { module = "io.insert-koin:koin-compose-viewmodel", version.ref = "koinCore" }
+koin-compose-viewmodel-navigation = { module = "io.insert-koin:koin-compose-viewmodel-navigation", version.ref = "koinCore" }
+lifecycle-viewmodel = { module = "androidx.lifecycle:lifecycle-viewmodel", version.ref = "lifecycleViewModel"}
+lifecycle-viewmodel-compose = { module = "org.jetbrains.androidx.lifecycle:lifecycle-viewmodel-compose", version.ref = "lifecycleViewModelCompose"}
+
 kotlinx-datetime = { module = "org.jetbrains.kotlinx:kotlinx-datetime", version.ref = "kotlinxDatetime" }
 
 androidx-security-crypto = { module = "androidx.security:security-crypto", version.ref = "securityCrypto" }
 androidx-webkit = { module = "androidx.webkit:webkit", version.ref = "webkit" }
 foundation = { module = "org.jetbrains.compose.foundation:foundation", version.ref = "foundation" }
+
 koin-android = { module = "io.insert-koin:koin-android", version.ref = "koinAndroid" }
 koin-androidx-compose = { module = "io.insert-koin:koin-androidx-compose", version.ref = "koinAndroid" }
 koin-core = { module = "io.insert-koin:koin-core", version.ref = "koinCore" }
-koin-core-v340 = { module = "io.insert-koin:koin-core", version.ref = "koinCoreVersion" }
 kotlinx-coroutines-core = { module = "org.jetbrains.kotlinx:kotlinx-coroutines-core", version.ref = "kotlinx-coroutines" }
 kotlinx-serialization-json = { module = "org.jetbrains.kotlinx:kotlinx-serialization-json", version.ref = "kotlinx-serialization" }
 ktor-client-content-negotiation = { module = "io.ktor:ktor-client-content-negotiation", version.ref = "ktor" }
@@ -56,7 +70,9 @@ ktor-client-darwin = { module = "io.ktor:ktor-client-darwin", version.ref = "kto
 
 android-driver = { module = "app.cash.sqldelight:android-driver", version.ref = "sqliteDriverVersion" }
 ktor-utils = { module = "io.ktor:ktor-utils", version.ref = "ktor" }
+lifecycle-viewmodel-compose-v282 = { module = "org.jetbrains.androidx.lifecycle:lifecycle-viewmodel-compose", version.ref = "lifecycleViewmodelComposeVersion" }
 native-driver = { module = "app.cash.sqldelight:native-driver", version.ref = "sqliteDriverVersion" }
+precompose-viewmodel = { module = "me.bush:precompose-viewmodel", version.ref = "precomposeViewmodel" }
 sqldelight-sqlite-driver = { module = "app.cash.sqldelight:sqlite-driver", version.ref = "sqliteDriverVersion" }
 
 kotlin-test = { module = "org.jetbrains.kotlin:kotlin-test", version.ref = "kotlin" }
@@ -82,6 +98,8 @@ ui-util = { module = "org.jetbrains.compose.ui:ui-util", version.ref = "uiUtil" 
 
 okio = { module = "com.squareup.okio:okio", version.ref = "okio" }
 androidx-security-crypto-ktx = { group = "androidx.security", name = "security-crypto-ktx", version.ref = "securityCryptoKtx" }
+androidx-lifecycle-viewmodel-android = { group = "androidx.lifecycle", name = "lifecycle-viewmodel-android", version.ref = "lifecycleViewmodelAndroid" }
+androidx-animation-core-lint = { group = "androidx.compose.animation", name = "animation-core-lint", version.ref = "animationCoreLint" }
 
 [plugins]
 androidApplication = { id = "com.android.application", version.ref = "agp" }
